--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             android:exported="false" />
         <activity
             android:name=".ManHinhKhachHang"
+            android:exported="true"/>
+        <activity
+            android:name=".ManHinhNhanVien"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
