--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,18 @@
             android:exported="false" />
         <activity
             android:name=".ManHinhKhachHang"
-            android:exported="true"/>
-        <activity
-            android:name=".ManHinhNhanVien"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ManHinhNhanVien"
+            android:exported="true">
+
         </activity>
     </application>
 
