--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,18 +26,20 @@
             android:exported="false"/>
         <activity
             android:name=".DangNhap"
-            android:exported="false"/>
-        <activity
-            android:name=".DangKy"
-            android:exported="false"/>
-        <activity
-            android:name=".ManHinhKhachHang"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".DangKy"
+            android:exported="false"/>
+        <activity
+            android:name=".ManHinhKhachHang"
+            android:exported="true">
+
         </activity>
     </application>
 
