--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".ProfileUser"
+            android:exported="false"/>
     </application>
 
 </manifest>
