--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         </activity>
         <activity android:name=".ProfileUser"
             android:exported="false"/>
+        <activity android:name=".ShowProductFromCate"
+            android:exported="false"/>
     </application>
 
 </manifest>
